Fix contrast issue

--- a/style.css
+++ b/style.css
@@ -229,12 +229,7 @@ button:hover {
 }
 
 .card {
-  background-image: linear-gradient(
-      180.45deg,
-      rgba(38, 38, 38, 0) 0.75%,
-      rgba(38, 38, 38, 0.9) 61.94%
-    ),
-    url("./images/card-bg.png");
+  background-image: url("./images/card-bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 24.125rem;
@@ -242,7 +237,6 @@ button:hover {
   flex-direction: column;
   gap: 0.75rem;
   padding: 0 1rem;
-  background-color: #545454;
 }
 
 .card h2 {
